Fixed blurred images.

--- a/static/style.css
+++ b/static/style.css
@@ -1510,8 +1510,7 @@ ul.arrow {
   font-weight: 300; }
 
 .page figure {
-  margin-bottom: 30px;
-  margin-left: 30px; }
+  margin-bottom: 30px; }
 .page img {
   max-width: 100%; }
 .page .movie-title {
